Fix 1px gap in sticky th under sticky tabs
This was missed in the great tab refactor of ebbc59b

--- a/views/css/base.css
+++ b/views/css/base.css
@@ -387,7 +387,7 @@ thead th {
 }
 
 /* Stick headers below tabs if we have them */
-nav + main .sticky th { top: calc(5.75rem + 2px) }
+nav + main .sticky th { top: calc(5.75rem + 1px) }
 
 .tabs {
     display: flex;
